# roms-nc

./: .gitignore  .pylintrc  1_roho160_check.ipynb  2_roho160_fix_grid.ipynb  3_roho160_fix_initial.ipynb  4_roho160_fix_rivers.ipynb  6_roho160_fill_bry.ipynb  7_roho160_vis.ipynb  README.md  a20_check.ipynb  check.ipynb  grid.ipynb  main.py  pyproject.toml  rivers_fix_1stage.ipynb  rivers_fix_3stage.ipynb  roho160_check.ipynb  roho160_fix_bry.ipynb  setup.py  upwelling_check.ipynb  xr.ipynb  xr_roms.ipynb
da_trondkr/: createObservationfile.py  writeObsfile.py
data/: roms_his.nc
notebooks/: check_input.ipynb  test.ipynb  test_roms.ipynb  test_xr.ipynb  test_xr_roms.ipynb  upwelling_roms.ipynb
notebooks/assimilation/: check.ipynb  createObservationfile.py  getCortad.py
notebooks/boundaries/: bry_fix.ipynb  change_s_layers.ipynb  check.ipynb  roho800_check.ipynb
notebooks/cice/: air_forcing.ipynb  check_a20_input.ipynb  check_a20_output.ipynb  check_arctic20_output.ipynb  check_example.ipynb  mask_roms_to_cice.ipynb
notebooks/climatology/: change_s_layers.ipynb
notebooks/common/: check.ipynb  roms_xr.ipynb  visualize.ipynb
notebooks/da/: check_roho800.ipynb  check_w13.ipynb  check_w13_input.ipynb  roho800_check.ipynb  roho800_create_obs.ipynb  roho800_create_obs_nature.ipynb  roho800_init.ipynb  roho800_init_from_avg.ipynb  roho800_init_from_restart.ipynb  roho800_std.ipynb  w13_input.ipynb  w13_output.ipynb
roms_matlab/: d_observations.m
roms_nc/: cice_fake_forcing.py  cice_forcing.py  extract_variable.py  handlers.py  make_gif.py
src/: tools.py
(+30 files in other folders)
