[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "roms_nc"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "xarray[complete] == 2023.7.0",
    "ipykernel",
]

[tool.setuptools.packages.find]
include = ["roms_nc"]

[tool.pyright]
typeCheckingMode = "off"

[tool.pylint.messages_control]
max-line-length = 120
disable = [
  "missing-docstring",
  "unused-argument",
  "protected-access",
  "too-few-public-methods",
  "too-many-locals",
  "invalid-name",
]

[tool.pylint.design]
# limiting the number of returns might discourage
# the use of guard clauses. So we increase the
# allowed number of returns from 6 to 8
max-returns = 8
